--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
     <title>THE PSYCHIC GAME</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">   
     <script src="assets/javascript/game.js"></script>
 </head>
 
 <body>
-
-    <div id="psychic">
+    <header id="masthead">
         <h1>THE PSYCHIC GAME</h1>
-        <h2>Guess What Letter I'm Thinkg Of:</h2>
-        <ul>
-            <li>Wins    <div id="wins"></div></li>
-            <li>Losses  <div id ="losses"></div></li>
-            <li>Guess Left      <div id ="guessLeft"></div></li>
-            <li>Your Guesses so far     <div id ="userGuess"></div></li>
-        </ul>
-    </div>
+    </header>
 
+    <div id="main-container" class="container">
+        <section class="main-section">  
+            <h2>Guess What Letter I'm Thinkg Of:</h2>
+            <ul>
+                <li>Wins    <span id="wins"></span></li>
+                <li>Losses  <span id ="losses"></span></li>
+                <li>Guess Left      <span id ="guessLeft"></span></li>
+                <li>Your Guesses so far     <span id ="userGuess"></span></li>
+            </ul>
+    </div>
+    <footer>
+        HW3 Psychic Game
+    </footer>
 </body>
 </html>
