working psychic game with style

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 <body>
     <header id="masthead">
         <h1>THE PSYCHIC GAME</h1>
+   
     </header>
 
     <div id="main-container" class="container">
         <section class="main-section">  
             <h2>Guess What Letter I'm Thinkg Of:</h2>
+            <p>Just Type Any Letter:</p>
             <ul>
-                <li>Wins    <span id="wins"></span></li>
+                <li>Wins   <span id="wins"></span></li>
                 <li>Losses  <span id ="losses"></span></li>
                 <li>Guess Left      <span id ="guessLeft"></span></li>
                 <li>Your Guesses so far     <span id ="userGuess"></span></li>
